k/django-notes.yaml

# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306

---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: notes-app
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None  

---
# Notes App Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-deployment
  labels:
    app: notes-app
  namespace: notes-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
      annotations:
        rollme: "always"
    spec:
      containers:
      - name: notes-app
        image: projectimage01.azurecr.io/notes-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
# Notes App Service
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  namespace: notes-app
spec:
  selector:
    app: notes-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000      
  type: LoadBalancer  
  externalIPs: 
    - 74.179.232.243
